--- a/Css/homepg.css
+++ b/Css/homepg.css
@@ -13,6 +13,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 10px 30px ;
+    width: 100%;
     background-color: #d3e6f9;
     box-shadow: 0 4px 3px rgba(0, 0, 0, 0.1);
 }
